adding tests for older node.js versions

--- a/.github/actions/setup-env/action.yml
+++ b/.github/actions/setup-env/action.yml
@@ -41,7 +41,7 @@ runs:
       with:
         path: ~/Library/Caches/node-gyp
         key: '${{ inputs.os }}-${{ inputs.node}}'
-        
+
     - if: runner.os == 'macOS' && inputs.node == 16
       shell: bash
       name: Add missing packages for macOS NodeJs 16 
@@ -73,7 +73,7 @@ runs:
       if: runner.os == 'Linux'
       shell: bash
       run: |
-        sudo apt -q install mono-complete pkg-config
+        sudo apt -q install mono-complete pkg-config glib-2.0
 
     - name: Versions
       shell: bash
