--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -57,12 +57,10 @@ jobs:
         uses: actions/download-artifact@v4
 
       - name: Upload artifacts
-        uses: actions/upload-artifact@v4
+        uses: actions/upload-artifact/merge@v4
         if: success()
         with:
           name: edge-js-${{ inputs.build-version }}
-          path: |
-            * 
   
   test:
     runs-on: ${{ matrix.os }}
