--- a/.github/workflows/build-all.yml
+++ b/.github/workflows/build-all.yml
@@ -119,12 +119,10 @@ jobs:
         uses: actions/download-artifact@v4
 
       - name: Upload artifacts
-        uses: actions/upload-artifact@v4
+        uses: actions/upload-artifact/merge@v4
         if: success()
         with:
           name: edge-js
-          path: |
-            * 
   
   test-16:
     strategy:
