--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -85,8 +85,8 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [macos-13, macos-15, ubuntu-24.04, ubuntu-24.04-arm, windows-2022]
-        # os: [macos-13, macos-15]
+        # os: [macos-13, macos-15, ubuntu-24.04, ubuntu-24.04-arm, windows-2022, windows-11-arm]
+        os: [macos-15, windows-2022, windows-11-arm]
        # node: [18, 20, 22, 23]
         node: [18, 20, 22, 23]
     steps:
@@ -94,22 +94,34 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
+      - name: Skip arm64 tests
+        if: matrix.os == 'windows-11-arm' && matrix.node < 20
+        uses: actions/github-script@v7
+        with:
+          result-encoding: string
+          script: |
+              core.notice('Skipping arm64 tests on Windows ARM for Node.js version ' + ${{ matrix.node }});
+
       - name: Setup env
+        if: matrix.os != 'windows-11-arm' || matrix.node >= 20
         uses: ./.github/actions/setup-env
         with:
           node: ${{ matrix.node }}
           os: ${{ matrix.os }}
 
       - name: Run .NET 4.5 tests
+        if: matrix.os != 'windows-11-arm' || matrix.node >= 20
         shell: bash
         run: node tools/test.js CI
 
       - name: "Run .net core tests"
+        if: matrix.os != 'windows-11-arm' || matrix.node >= 20
         run: node tools/test.js CI
         env:
           EDGE_USE_CORECLR: 1
 
       - name: Test report
+        if: matrix.os != 'windows-11-arm' || matrix.node >= 20
         uses: ./.github/actions/create-test-report
         with:
           node: ${{ matrix.node }}
