reverting build CI changes

--- a/.github/actions/test-build/action.yml
+++ b/.github/actions/test-build/action.yml
@@ -37,14 +37,7 @@ runs:
           }
 
     - name: Download artifacts
-      if:  inputs.os == 'windows-2022'
-      uses: actions/download-artifact@v4
-      with:
-        path: release
-        pattern: win32-edge-js-ia32-${{ inputs.node }}*
-
-    - name: Download artifacts
-      if: inputs.os == 'windows-2025'
+      if: runner.os == 'Windows'
       uses: actions/download-artifact@v4
       with:
         path: release
@@ -69,16 +62,12 @@ runs:
       run: ls -R release
 
     - name: Copy artifacts
-      if: inputs.os == 'windows-2025'
+      if: runner.os == 'Windows'
       shell: pwsh
       run: |
         cmd /c copy /y release\win32-edge-js-${{ inputs.node }}\win32\x64\${{ inputs.node }}\edge_*.node lib\native\win32\x64\${{ inputs.node }}
-
-    - name: Copy artifacts
-      if:  inputs.os == 'windows-2022'
-      shell: pwsh
-      run: |
-        cmd /c copy /y release\win32-edge-js-ia32-${{ inputs.node }}\win32\ia32\${{ inputs.node }}\edge_*.node lib\native\win32\ia32\${{ inputs.node }}
+        cmd /c copy /y release\win32-edge-js-${{ inputs.node }}\win32\ia32\${{ inputs.node }}\edge_*.node lib\native\win32\ia32\${{ inputs.node }}
+        cmd /c copy /y release\win32-edge-js-${{ inputs.node }}\win32\arm64\${{ inputs.node }}\edge_*.node lib\native\win32\arm64\${{ inputs.node }}
 
     - name: Copy artifacts
       if: inputs.os == 'macos-13'
@@ -114,30 +103,12 @@ runs:
 
     - name: Setup env
       uses: ./.github/actions/setup-env
-      if: inputs.os != 'windows-2022'
       with:
         node: ${{ inputs.node }}
         os: ${{ inputs.os }}
-        arch: ${{ runner.arch }}
-
-    - name: Setup env
-      uses: ./.github/actions/setup-env
-      if: inputs.os == 'windows-2022'
-      with:
-        node: ${{ inputs.node }}
-        os: ${{ inputs.os }}
-        arch: x86
 
     - name: Check edge-js Windows pre-built files
-      if: inputs.os == 'windows-2022'
-      uses: andstor/file-existence-action@v3
-      with:
-        files: "lib/native/win32/ia32/${{ inputs.node }}/edge_coreclr.node, lib/native/win32/ia32/${{ inputs.node }}/edge_nativeclr.node"
-        fail: true
-        ignore_case: true
-
-    - name: Check edge-js Windows pre-built files
-      if: runner.os == 'Windows' && inputs.os != 'windows-2022'
+      if: runner.os == 'Windows'
       uses: andstor/file-existence-action@v3
       with:
         files: "lib/native/win32/${{ runner.arch }}/${{ inputs.node }}/edge_coreclr.node, lib/native/win32/${{ runner.arch }}/${{ inputs.node }}/edge_nativeclr.node"
