--- a/.github/actions/build-node/action.yml
+++ b/.github/actions/build-node/action.yml
@@ -13,16 +13,8 @@ runs:
   using: "composite"
   steps:
 
-      - name: Setup env
-        if: inputs.os == 'windows-2022'
-        uses: ./.github/actions/setup-env
-        with:
-          node: 22
-          os: ${{ inputs.os }}
-          arch: 'x86'
 
       - name: Setup env
-        if: inputs.os != 'windows-2022'
         uses: ./.github/actions/setup-env
         with:
           node: 22
@@ -46,12 +38,10 @@ runs:
           script: |
             try {
               const fs = require('fs')
-              if('${{ runner.os }}' == 'Windows' && '${{ inputs.os }}' == 'windows-2022'){
+              if('${{ runner.os }}' == 'Windows'){
                 if(${{ inputs.node }} <23){
                   fs.mkdirSync('release/win32/ia32/${{ inputs.node }}', { recursive: true });
                 }
-              }
-              else if('${{ runner.os }}' == 'Windows' && '${{ inputs.os }}' == 'windows-2025'){
                 fs.mkdirSync('release/win32/x64/${{ inputs.node }}', { recursive: true });
                 if(${{ inputs.node }} >=20){
                   fs.mkdirSync('release/win32/arm64/${{ inputs.node }}', { recursive: true });
@@ -75,12 +65,10 @@ runs:
           script: |
             try {
               const fs = require('fs')
-              if('${{ runner.os }}' == 'Windows' && '${{ inputs.os }}' == 'windows-2022'){
+              if('${{ runner.os }}' == 'Windows'){
                 if(${{ inputs.node }} <23){
                   fs.writeFileSync('release/win32/ia32/${{ inputs.node }}/node.version', '${{ steps.node-test-version.outputs.node-version }}');
                 }
-              }
-              else if('${{ runner.os }}' == 'Windows' && '${{ inputs.os }}' == 'windows-2025'){
                 fs.writeFileSync('release/win32/x64/${{ inputs.node }}/node.version', '${{ steps.node-test-version.outputs.node-version }}');
                 if(${{ inputs.node }} >=20){
                   fs.writeFileSync('release/win32/arm64/${{ inputs.node }}/node.version', '${{ steps.node-test-version.outputs.node-version }}');
@@ -116,7 +104,7 @@ runs:
           key: '${{ inputs.os }}-${{ inputs.node}}'
 
       - name: Build ia32
-        if: (inputs.os == 'windows-2022') && (inputs.node <23)
+        if: (runner.os == 'Windows') && (inputs.node <23)
         uses: ./.github/actions/build
         with:
           node: ${{ steps.node-test-version.outputs.node-version }}
@@ -124,7 +112,7 @@ runs:
           arch: 'ia32'
 
       - name: Build arm64
-        if: inputs.os != 'macos-13' && inputs.os != 'windows-2022' && (inputs.node >=20 || inputs.os  == 'macos-15')
+        if: inputs.os != 'macos-13' && (inputs.node >=20 || inputs.os  == 'macos-15')
         uses: ./.github/actions/build
         with:
           node: ${{ steps.node-test-version.outputs.node-version }}
@@ -133,7 +121,7 @@ runs:
 
       - name: Build x64
         uses: ./.github/actions/build
-        if: (inputs.os == 'windows-2025') || (inputs.os  == 'macos-13')
+        if: (runner.os == 'Windows') || (inputs.os  == 'macos-13')
         with:
           node: ${{ steps.node-test-version.outputs.node-version }}
           node-major: ${{ inputs.node }}
@@ -141,17 +129,9 @@ runs:
     
       - name: Upload artifacts
         uses: actions/upload-artifact@v4
-        if: inputs.os == 'windows-2025' && success()
+        if: runner.os == 'Windows' && success()
         with:
           name: win32-edge-js-${{ inputs.node }}
-          path: |
-            release
-
-      - name: Upload artifacts
-        uses: actions/upload-artifact@v4
-        if: inputs.os == 'windows-2022' && success()
-        with:
-          name: win32-edge-js-ia32-${{ inputs.node }}
           path: |
             release
 
