--- a/.github/workflows/build-all.yml
+++ b/.github/workflows/build-all.yml
@@ -15,7 +15,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix: 
-       os: [windows-2022, windows-2025, macos-13, macos-15]
+       os: [windows-2025, macos-13, macos-15]
     runs-on: ${{ matrix.os }}
     name: build node-16 ${{ matrix.os }}
     steps:
@@ -34,7 +34,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix: 
-       os: [windows-2022, windows-2025, macos-13, macos-15]
+       os: [windows-2025, macos-13, macos-15]
     runs-on: ${{ matrix.os }}
     name: build node-18 ${{ matrix.os }}
     steps:
@@ -53,7 +53,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix: 
-       os: [windows-2022, windows-2025, macos-13, macos-15]
+       os: [windows-2025, macos-13, macos-15]
     runs-on: ${{ matrix.os }}
     name: build node-20 ${{ matrix.os }}
     steps:
@@ -72,7 +72,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix: 
-       os: [windows-2022, windows-2025, macos-13, macos-15]
+       os: [windows-2025, macos-13, macos-15]
     runs-on: ${{ matrix.os }}
     name: build node-22 ${{ matrix.os }}
     steps:
@@ -90,7 +90,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix: 
-       os: [windows-2022, windows-2025, macos-13, macos-15]
+       os: [windows-2025, macos-13, macos-15]
     runs-on: ${{ matrix.os }}
     name: build node-23 ${{ matrix.os }}
     steps:
@@ -128,7 +128,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix: 
-       os: [windows-2022, windows-2025, macos-13, macos-15]
+       os: [windows-2025, windows-11-arm, macos-13, macos-15]
     runs-on: ${{ matrix.os }}
     needs: build-16
 
@@ -148,7 +148,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix: 
-       os: [windows-2022, windows-2025, macos-13, macos-15]
+       os: [windows-2025, windows-11-arm, macos-13, macos-15]
     runs-on: ${{ matrix.os }}
     needs: build-18
 
@@ -168,7 +168,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix: 
-       os: [windows-2022, windows-2025, macos-13, macos-15]
+       os: [windows-2025, windows-11-arm, macos-13, macos-15]
     runs-on: ${{ matrix.os }}
     needs: build-20
 
@@ -188,7 +188,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix: 
-       os: [windows-2022, windows-2025, macos-13, macos-15]
+       os: [windows-2025, windows-11-arm, macos-13, macos-15]
     runs-on: ${{ matrix.os }}
     needs: build-22
 
@@ -208,7 +208,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix: 
-       os: [windows-2022, windows-2025, macos-13, macos-15]
+       os: [windows-2025, windows-11-arm, macos-13, macos-15]
     runs-on: ${{ matrix.os }}
     needs: build-23
 
