updating build CI

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -27,8 +27,8 @@ jobs:
     #   node-version: ${{ steps.node-test-version.outputs.node-version }}
     strategy:
       matrix:
-        os: [windows-2025]
-        # os: [windows-2025, macos-13, macos-15]
+        # os: [windows-2025]
+        os: [windows-2025, macos-13, macos-15]
       fail-fast: true
        
     name: build node-${{ inputs.build-version }} ${{ matrix.os }}
@@ -67,8 +67,8 @@ jobs:
     needs: build
     strategy:
       matrix:
-        os: [windows-2025, windows-11-arm]
-        # os: [windows-2025, windows-11-arm, macos-13, macos-15]
+        # os: [windows-2025, windows-11-arm]
+        os: [windows-2025, windows-11-arm, macos-13, macos-15]
       fail-fast: false
 
     name: test node-${{ inputs.build-version }} ${{ matrix.os }}
