--- a/.github/workflows/build-all.yml
+++ b/.github/workflows/build-all.yml
@@ -106,7 +106,7 @@ jobs:
 
   upload-artifacts:
     runs-on: ubuntu-latest
-    needs: [build-16, build-18, build-20, build-22, build-23]
+    needs: [test-16, test-18, test-20, test-22, test-23]
     # needs: [build-20, build-22]
     timeout-minutes: 20
     strategy:
@@ -117,6 +117,16 @@ jobs:
 
       - name: Download artifacts
         uses: actions/download-artifact@v4
+        if: success()
+        with:
+          path: release
+          pattern: win32-edge-js*
+
+      - name: Download artifacts
+        uses: actions/download-artifact@v4
+        with:
+          path: release
+          pattern: darwin-edge-js*
 
       - name: Upload artifacts
         uses: actions/upload-artifact/merge@v4
@@ -130,7 +140,7 @@ jobs:
       matrix: 
        os: [windows-2025, windows-11-arm, macos-13, macos-15]
     runs-on: ${{ matrix.os }}
-    needs: [upload-artifacts, build-16]
+    needs: [build-16]
 
     name: test node-16 ${{ matrix.os }}
     steps:
@@ -150,7 +160,7 @@ jobs:
       matrix: 
        os: [windows-2025, windows-11-arm, macos-13, macos-15]
     runs-on: ${{ matrix.os }}
-    needs: [upload-artifacts, build-18]
+    needs: [build-18]
 
     name: test node-18 ${{ matrix.os }}
     steps:
@@ -170,7 +180,7 @@ jobs:
       matrix: 
        os: [windows-2025, windows-11-arm, macos-13, macos-15]
     runs-on: ${{ matrix.os }}
-    needs: [upload-artifacts, build-20]
+    needs: [build-20]
 
     name: test node-20 ${{ matrix.os }}
     steps:
@@ -190,7 +200,7 @@ jobs:
       matrix: 
        os: [windows-2025, windows-11-arm, macos-13, macos-15]
     runs-on: ${{ matrix.os }}
-    needs: [upload-artifacts, build-22]
+    needs: [build-22]
 
     name: test node-22 ${{ matrix.os }}
     steps:
@@ -210,7 +220,7 @@ jobs:
       matrix: 
        os: [windows-2025, windows-11-arm, macos-13, macos-15]
     runs-on: ${{ matrix.os }}
-    needs: [upload-artifacts, build-23]
+    needs: [build-23]
 
     name: test node-23 ${{ matrix.os }}
     steps:
