--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -43,10 +43,9 @@ jobs:
           node: ${{ inputs.build-version }}
           os: ${{ matrix.os }}
 
-
   upload-artifacts:
     runs-on: ubuntu-latest
-    needs: build
+    needs: test
     strategy:
       fail-fast: false
 
@@ -55,6 +54,16 @@ jobs:
 
       - name: Download artifacts
         uses: actions/download-artifact@v4
+        if: success()
+        with:
+          path: release
+          pattern: win32-edge-js*
+
+      - name: Download artifacts
+        uses: actions/download-artifact@v4
+        with:
+          path: release
+          pattern: darwin-edge-js*
 
       - name: Upload artifacts
         uses: actions/upload-artifact/merge@v4
