--- a/.github/workflows/build-all.yml
+++ b/.github/workflows/build-all.yml
@@ -10,24 +10,6 @@ env:
   node: 20
 
 jobs:
-  build-16:
-    timeout-minutes: 20
-    strategy:
-      fail-fast: false
-      matrix: 
-       os: [windows-2025, macos-13, macos-15]
-    runs-on: ${{ matrix.os }}
-    name: build node-16 ${{ matrix.os }}
-    steps:
-
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Build Node 16
-        uses: ./.github/actions/build-node
-        with:
-          node: 16
-          os: ${{ matrix.os }}
   
   build-18:
     timeout-minutes: 20
@@ -86,27 +68,27 @@ jobs:
           node: 22
           os: ${{ matrix.os }}
   
-  build-23:
+  build-24:
     strategy:
       fail-fast: false
       matrix: 
        os: [windows-2025, macos-13, macos-15]
     runs-on: ${{ matrix.os }}
-    name: build node-23 ${{ matrix.os }}
+    name: build node-24 ${{ matrix.os }}
     steps:
 
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Build Node 23
+      - name: Build Node 24
         uses: ./.github/actions/build-node
         with:
-          node: 23
+          node: 24
           os: ${{ matrix.os }}
 
   upload-artifacts:
     runs-on: ubuntu-latest
-    needs: [test-16, test-18, test-20, test-22, test-23]
+    needs: [test-18, test-20, test-22, test-24]
     # needs: [build-20, build-22]
     timeout-minutes: 20
     strategy:
@@ -133,27 +115,7 @@ jobs:
         if: success()
         with:
           name: edge-js
-  
-  test-16:
-    strategy:
-      fail-fast: false
-      matrix: 
-       os: [windows-2025, windows-11-arm, macos-13, macos-15]
-    runs-on: ${{ matrix.os }}
-    needs: [build-16]
 
-    name: test node-16 ${{ matrix.os }}
-    steps:
-
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Test build
-        uses: ./.github/actions/test-build
-        with:
-          node: 16
-          os: ${{ matrix.os }}
-  
   test-18:
     strategy:
       fail-fast: false
@@ -214,15 +176,15 @@ jobs:
           node: 22
           os: ${{ matrix.os }}
   
-  test-23:
+  test-24:
     strategy:
       fail-fast: false
       matrix: 
        os: [windows-2025, windows-11-arm, macos-13, macos-15]
     runs-on: ${{ matrix.os }}
-    needs: [build-23]
+    needs: [build-24]
 
-    name: test node-23 ${{ matrix.os }}
+    name: test node-24 ${{ matrix.os }}
     steps:
 
       - name: Checkout code
@@ -231,6 +193,6 @@ jobs:
       - name: Test build
         uses: ./.github/actions/test-build
         with:
-          node: 23
+          node: 24
           os: ${{ matrix.os }}
   
