pausing CI that checks older version support

--- a/.github/workflows/ci-old.yml
+++ b/.github/workflows/ci-old.yml
@@ -2,76 +2,76 @@ name: CI out of support
 
 on:
   workflow_dispatch:
-  pull_request:
-    paths-ignore:
-      - 'samples/*'
-      - 'stress/*'
-      - 'performance/*'
-      - '.github/FUNDING.YML'
-      - '.github/workflows/ci.yml'
-      - '.github/workflows/build.yml'
-      - '.github/workflows/build*.yml'
-      - '.github/actions/test-build/action.yml'
-      - '.github/actions/build*/*.*'
-      - '.github/actions/build/*.*'
-      - '**/*.md'
-      - '**/*.d.ts'
-      - '**/*.bat'
-      - '.travis.yml'
-      - 'Dockerfile'
-      - '.gitconfig'
-      - '.gitignore'
-      - 'appveyor*.*'
-      - 'LICENSE*'
-      - '.idea/**'
-      - '.vscode/**'
-      - '*.bat'
-      - '*.nuspec'
-      - 'tools/nuget/*'
-      - '.npmignore'
-      - 'test/config.json'
-      - 'test/double'
-      - '.circleci'
-      - '.circleci/*'
-      - 'README.md'
-      - '*.sln'
-      - '*.vcxproj'
-  push:
-    branches-ignore:
-      - 'circleci'
-    paths-ignore:
-      - 'samples/*'
-      - 'stress/*'
-      - 'performance/*'
-      - '.github/FUNDING.YML'
-      - '.github/workflows/ci.yml'
-      - '.github/workflows/build.yml'
-      - '.github/workflows/build*.yml'
-      - '.github/actions/test-build/action.yml'
-      - '.github/actions/build*/*.*'
-      - '.github/actions/build/*.*'
-      - '**/*.md'
-      - '**/*.d.ts'
-      - '**/*.bat'
-      - '.travis.yml'
-      - 'Dockerfile'
-      - '.gitconfig'
-      - '.gitignore'
-      - 'appveyor*.*'
-      - 'LICENSE*'
-      - '.idea/**'
-      - '.vscode/**'
-      - '*.bat'
-      - '*.nuspec'
-      - 'tools/nuget/*'
-      - '.npmignore'
-      - 'test/config.json'
-      - 'test/double'
-      - '.circleci'
-      - '.circleci/*'
-      - 'README.md'
-      - '*.sln'
-      - '*.vcxproj'
+  # pull_request:
+  #   paths-ignore:
+  #     - 'samples/*'
+  #     - 'stress/*'
+  #     - 'performance/*'
+  #     - '.github/FUNDING.YML'
+  #     - '.github/workflows/ci.yml'
+  #     - '.github/workflows/build.yml'
+  #     - '.github/workflows/build*.yml'
+  #     - '.github/actions/test-build/action.yml'
+  #     - '.github/actions/build*/*.*'
+  #     - '.github/actions/build/*.*'
+  #     - '**/*.md'
+  #     - '**/*.d.ts'
+  #     - '**/*.bat'
+  #     - '.travis.yml'
+  #     - 'Dockerfile'
+  #     - '.gitconfig'
+  #     - '.gitignore'
+  #     - 'appveyor*.*'
+  #     - 'LICENSE*'
+  #     - '.idea/**'
+  #     - '.vscode/**'
+  #     - '*.bat'
+  #     - '*.nuspec'
+  #     - 'tools/nuget/*'
+  #     - '.npmignore'
+  #     - 'test/config.json'
+  #     - 'test/double'
+  #     - '.circleci'
+  #     - '.circleci/*'
+  #     - 'README.md'
+  #     - '*.sln'
+  #     - '*.vcxproj'
+  # push:
+  #   branches-ignore:
+  #     - 'circleci'
+  #   paths-ignore:
+  #     - 'samples/*'
+  #     - 'stress/*'
+  #     - 'performance/*'
+  #     - '.github/FUNDING.YML'
+  #     - '.github/workflows/ci.yml'
+  #     - '.github/workflows/build.yml'
+  #     - '.github/workflows/build*.yml'
+  #     - '.github/actions/test-build/action.yml'
+  #     - '.github/actions/build*/*.*'
+  #     - '.github/actions/build/*.*'
+  #     - '**/*.md'
+  #     - '**/*.d.ts'
+  #     - '**/*.bat'
+  #     - '.travis.yml'
+  #     - 'Dockerfile'
+  #     - '.gitconfig'
+  #     - '.gitignore'
+  #     - 'appveyor*.*'
+  #     - 'LICENSE*'
+  #     - '.idea/**'
+  #     - '.vscode/**'
+  #     - '*.bat'
+  #     - '*.nuspec'
+  #     - 'tools/nuget/*'
+  #     - '.npmignore'
+  #     - 'test/config.json'
+  #     - 'test/double'
+  #     - '.circleci'
+  #     - '.circleci/*'
+  #     - 'README.md'
+  #     - '*.sln'
+  #     - '*.vcxproj'
 
 env:
   ACTIONS_ALLOW_UNSECURE_COMMANDS: true # required to setup CSC
