--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -40,6 +40,7 @@ jobs:
         with:
           node: ${{ inputs.build-version }}
           os: ${{ matrix.os }}
+          environment: release
 
   upload-artifacts:
     runs-on: ubuntu-latest
