--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,7 +21,7 @@ env:
 jobs:
   build:
     runs-on: ${{ matrix.os }}
-    environment: edge-js-${{ inputs.build-version }}
+    # environment: edge-js-${{ inputs.build-version }}
     # outputs:
     #   node-version: ${{ steps.node-test-version.outputs.node-version }}
     strategy:
