--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -56,7 +56,7 @@ refs:
     - &DistUtils
       run:
         name: install distutils
-        command: sudo apt-get install -y python3-distutils
+        command: sudo apt install -y python3-setuptools
     - &Test
       run:
         shell: bash
