--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "owin",
     "edge",
     "net",
+    "dotnet",
     "clr",
     "coreclr",
     "c#",
@@ -23,6 +24,7 @@
     "owin",
     "edge",
     "net",
+    "dotnet",
     "clr",
     "coreclr",
     "c#",
