--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -140,5 +140,5 @@ workflows:
           matrix:
             parameters:
               os: ['macos']
-              node-version: ['14', '16']
+              node-version: ['16']
 
