--- a/.github/workflows/build-edge.yml
+++ b/.github/workflows/build-edge.yml
@@ -1,4 +1,4 @@
-name: Pipeline Segment - build electron-edge-js
+name: Pipeline Segment - build edge-js
 
 on:
   workflow_call:
@@ -76,7 +76,8 @@ jobs:
       - name: Build ${{ inputs.arch }}
         uses: ./.github/actions/build
         with:
-          electron: ${{ inputs.version }}
+          version: ${{ inputs.version }}
+          node: ${{ inputs.node }}
           arch: ${{ inputs.arch }}
     
       - name: Upload artifacts
