--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -65,7 +65,7 @@ jobs:
 
   build-win-x86:
     needs: node-version
-    if: ${{ fromJSON(inputs.version) }} < 23
+    if: ${{ fromJSON(inputs.version) < 23 }}  
     uses: ./.github/workflows/build-edge.yml
     with:
       version: ${{ inputs.version }}
@@ -83,7 +83,7 @@ jobs:
       node: ${{ needs.node-version.outputs.node-version }}
 
   build-win-arm64:
-    if: ${{ fromJSON(inputs.version) }} > 18
+    if: ${{ fromJSON(inputs.version)  > 18}}
     needs: node-version
     uses: ./.github/workflows/build-edge.yml
     with:
