--- a/.github/workflows/build-edge.yml
+++ b/.github/workflows/build-edge.yml
@@ -28,6 +28,7 @@ on:
 
 jobs:
   build-edge:
+    if: ${{ !(inputs.os == 'windows-2025' && inputs.arch == 'ia32' && inputs.node > 23) && !(inputs.os == 'windows-11-arm' && inputs.arch == 'arm64' && inputs.node <= 18) }}
     runs-on: ${{ inputs.os }}
     environment: ${{ inputs.environment }}
     name: build
