--- a/.github/workflows/build-edge.yml
+++ b/.github/workflows/build-edge.yml
@@ -22,14 +22,13 @@ on:
         type: string
       arch:
         description: 'arch'
-        required: false
-        default: ''
+        required: true
         type: string
 
 jobs:
   build-edge:
-    if: ${{ !(inputs.os == 'windows-2025' && inputs.arch == 'ia32' && inputs.node > 23) && !(inputs.os == 'windows-11-arm' && inputs.arch == 'arm64' && inputs.node <= 18) }}
     runs-on: ${{ inputs.os }}
+    if: ${{ (inputs.arch == 'ia32' && inputs.node < 23) || (inputs.arch == 'arm64' && inputs.os == 'windows-2025' && inputs.node > 19) || (inputs.os == 'macos-13') || (inputs.os == 'macos-15') }}
     environment: ${{ inputs.environment }}
     name: build
     timeout-minutes: 20
